changed the header font for a test issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ input {
   font-size: 1.2rem;
 }
 header h1 {
-  font-family: monospace;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-transform: uppercase;
   font-size: 40px;
 }
